<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kamino.starwars.com.kamino.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_residents"
        android:orderInCategory="100"
        android:title="@string/residents"
        app:showAsAction="always" />
</menu>
