<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/residentLayout"
    android:layout_margin="@dimen/margin_small"
    style="@style/resident_layout">

    <ImageView
        android:id="@+id/residentImage"
        android:src="@drawable/no_image_available"
        style="@style/resident_image_list"/>

    <TextView
        android:text="@string/empty_value"
        android:id="@+id/residentName"
        style="@style/resident_name_list"/>
</LinearLayout>